--- a/index.html
+++ b/index.html
@@ -150,7 +150,13 @@
   </a>
 </template>
 
-<script src="js/pictures.js"></script>
+<script src="js/picture.js"></script>
+<script src="js/gallery.js"></script>
+<script src="js/form.js"></script>
+<script src="js/form-validate.js"></script>
+<script src="js/form-filter.js"></script>
+<script src="js/resize-image.js"></script>
+<script src="js/preview.js"></script>
 
 </body>
 </html>
