--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
 <script src="js/form.js"></script>
 <script src="js/form-validate.js"></script>
 <script src="js/form-filter.js"></script>
-<script src="js/resize-image.js"></script>
+<script src="js/form-resize.js"></script>
 <script src="js/preview.js"></script>
 
 </body>
