--- a/index.html
+++ b/index.html
@@ -150,6 +150,7 @@
   </a>
 </template>
 
+<script src="js/constants.js"></script>
 <script src="js/picture.js"></script>
 <script src="js/gallery.js"></script>
 <script src="js/form.js"></script>
