--- a/index.html
+++ b/index.html
@@ -151,13 +151,14 @@
 </template>
 
 <script src="js/constants.js"></script>
+<script src="js/backend.js"></script>
 <script src="js/picture.js"></script>
+<script src="js/preview.js"></script>
 <script src="js/gallery.js"></script>
 <script src="js/form.js"></script>
 <script src="js/form-validate.js"></script>
 <script src="js/form-filter.js"></script>
 <script src="js/form-resize.js"></script>
-<script src="js/preview.js"></script>
 
 </body>
 </html>
