--- a/index.html
+++ b/index.html
@@ -151,7 +151,9 @@
 </template>
 
 <script src="js/constants.js"></script>
+<script src="js/debounce.js"></script>
 <script src="js/backend.js"></script>
+<script src="js/render.js"></script>
 <script src="js/picture.js"></script>
 <script src="js/preview.js"></script>
 <script src="js/gallery.js"></script>
