--- a/index.html
+++ b/index.html
@@ -151,6 +151,7 @@
 </template>
 
 <script src="js/constants.js"></script>
+<script src="js/functions.js"></script>
 <script src="js/debounce.js"></script>
 <script src="js/backend.js"></script>
 <script src="js/render.js"></script>
@@ -161,6 +162,5 @@
 <script src="js/form-validate.js"></script>
 <script src="js/form-filter.js"></script>
 <script src="js/form-resize.js"></script>
-
 </body>
 </html>
