--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 <form class="upload-form" id="upload-select-image" method="post" enctype="multipart/form-data" autocomplete="off" action="https://js.dump.academy/kekstagram">
   <div class="upload-image">
     <input type="file" id="upload-file" class="upload-input" name="filename">
-    <label class="upload-file upload-control" for="upload-file"></label>
+    <label class="upload-file upload-control" for="upload-file" tabindex="0"></label>
   </div>
 
   <div class="upload-overlay hidden">
